lista clientes, formulario nuevo cliente, editar clientes (falta sacar id)

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,8 @@
-<button></button>
-<button></button>
-<button></button>
-<button></button>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li type="button" class="btn btn-info m-2" [routerLink]="['/clientes']">Lista Clientes</li>
+        <li type="button" class="btn btn-info m-2" [routerLink]="['/clientes/nuevo']">Nuevo Cliente</li>
+        <li type="button" class="btn btn-info m-2" [routerLink]="['/registro']">Registrarse</li>
+        <li type="button" class="btn btn-info m-2" [routerLink]="['/login']">Identificarse</li>
+    </ul>
+</nav>
