--- a/src/app/pages/clientes/editar-cliente/editar-cliente.component.html
+++ b/src/app/pages/clientes/editar-cliente/editar-cliente.component.html
@@ -1,1 +1,57 @@
-<p>editar-cliente works!</p>
+<h2>Editar cliente</h2>
+
+<div class="container">
+  <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
+    <div class="mb-3">
+      <label class="form-label">Nombre</label>
+      <input type="text" class="form-control" formControlName="nombre" />
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Apellidos</label>
+      <input type="text" class="form-control" formControlName="apellidos" />
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Dirección</label>
+      <input type="text" class="form-control" formControlName="direccion" />
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Email</label>
+      <input type="email" class="form-control" formControlName="email" />
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Edad</label>
+      <input type="number" class="form-control" formControlName="edad" />
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">DNI</label>
+      <input type="text" class="form-control" formControlName="dni" />
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Género</label>
+      <select class= "form-select"  formControlName="genero" >
+        <option value="M"> Masculino</option>
+        <option value="F"> Femenino</option>
+      </select>
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Cuota</label>
+      <input type="number" class="form-control" formControlName="cuota" />
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Fecha de Nacimiento</label>
+      <input type="date" class="form-control" formControlName="fecha_nacimiento"
+      />
+    </div>
+
+    <input type="submit" value="Enviar" class="btn btn-info" />
+
+  </form>
+</div>
