--- a/src/app/pages/staff/login/login.component.html
+++ b/src/app/pages/staff/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div class="container">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+
+    <div class="mb-3">
+      <label class="form-label">Email</label>
+      <input type="email" class="form-control" formControlName="email" />
+    </div>
+    <div class="mb-3">
+
+      <label class="form-label">Password</label>
+      <input type="password" class="form-control" formControlName="password" />
+    </div>
+
+
+    <input type="submit" value="Enviar" class="btn btn-info" />
+
+  </form>
+</div>
